mobile stylistic fixes and changes to projects + navbar dark mode
project img center fixed by reverting img/video display back to inline, mobile auto-open of video issue resolved with 'playsinline' attribute added, overflow-x on homepage hidden to resolve issue of project-info horizontal scrolling on mobile, fixed project-info mobile display of sticky buttons at bottom by changing height of container to svh instead of vh: svh takes account of address bar on mobile browsers, adjusted dark mode side menu pop up to have a different brightness from rest of background

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -3,7 +3,8 @@
   display: grid;
   grid: auto / 4fr 6fr;
   height: 100%;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
 
   .text-zone {
     position: sticky;
