--- a/src/components/ProjectInfo/index.scss
+++ b/src/components/ProjectInfo/index.scss
@@ -15,7 +15,7 @@
   width: 100%;
   background-color: var(--background-color);
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow: scroll;
   height: 100vh;
   z-index: 100;
 }
@@ -105,10 +105,11 @@
   gap: 16px;
 
   > .item-sm {
+    align-self: center;
+    justify-self: center;
     > * {
-      width: 70%;
-      align-self: center;
-      justify-self: center;
+      width: 100%;
+      border-radius: 10px;
     }
   }
 
@@ -158,7 +159,7 @@
 
 @media only screen and (max-width: 550px) {
   .project-info {
-    height: calc(100vh - 60px);
+    height: calc(100svh - 60px);
     top: 60px;
   }
 
