--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -31,7 +31,6 @@
 
   img,
   video {
-    display: block;
     max-width: 100%;
     box-shadow: rgba(80, 78, 78, 0.5) 3px 3px 20px;
   }
